--- a/README.html
+++ b/README.html
@@ -368,10 +368,13 @@ summary {
 <div id="tcc-universidade-federal-de-viçosa" class="section level1">
 <h1>TCC Universidade Federal de Viçosa</h1>
 <p>
-Este repositório tem o objetivo em ser um padrão para escrita do TCC em linguagens como R, Rmarkdown e LaTeX, com padrão exigido pela Universidade Federal de Viçosa. Para utilizar este padrão siga os passos abaixo. instalações.
+Este repositório tem o objetivo em ser um padrão para escrita do TCC em linguagens como R, Rmarkdown e LaTeX, com padrão exigido pela Universidade Federal de Viçosa. Para utilizar este padrão siga os passos abaixo.
 </p>
-<div id="instalando" class="section level2">
-<h2>Instalando</h2>
+</div>
+<div id="manual" class="section level1">
+<h1>Manual</h1>
+<div id="instalação" class="section level2">
+<h2>Instalação</h2>
 <p>
 <p>Primeiramente você deve instalar o software R a partir da versão 4.0. <strong>Clique abaixo segurando o ‘ctrl’.</strong></p>
 <ul>
